--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -6,7 +6,7 @@
 @use "defaults";
 
 $container-gap: var(--graupl-container-gap, base.$gap);
-$container-content-max-width: var(--graupl-container-content-max-width, defaults.$container-content-max-width);
+$container-content-max-width: var(--graupl-container-content-max-width, base.$content-max-width);
 $container-breakout-max-width: var(--graupl-container-breakout-max-width, calc($container-content-max-width + defaults.$container-breakout-width));
 $container-breakout-width: var(--graupl-container-breakout-width, calc(($container-breakout-max-width - $container-content-max-width) / 2));
 $container-feature-max-width: var(--graupl-container-feature-max-width, calc($container-breakout-max-width + defaults.$container-feature-width));
