perf: optimize build and comment cleaning

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,6 +1,4 @@
-/**
- * Variables referencing custom properties.
- */
+// Variables referencing custom properties.
 
 @use "../node_modules/@graupl/base/scss/variables" as base;
 @use "defaults";
